--- a/.github/workflows/pipelineci-publish-docker-image.yml
+++ b/.github/workflows/pipelineci-publish-docker-image.yml
@@ -16,5 +16,5 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: silviorma/test
+          repository: paulomacedo/test
           tag_with_ref: true
