--- a/.github/workflows/pipelineci-publish-docker-image.yml
+++ b/.github/workflows/pipelineci-publish-docker-image.yml
@@ -17,4 +17,4 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: paulomacedo/test
-          tag_with_ref: true
+          tags: paulomacedo/test:latest
