--- a/.github/workflows/pipelineci-publish-docker-image.yml
+++ b/.github/workflows/pipelineci-publish-docker-image.yml
@@ -5,16 +5,37 @@ on:
             - master
 
 jobs:
-  push_to_registry:
-    name: Push Docker image to Docker Hub
+  name: Publish Docker image
+on:
+    push:
+        branches:
+            - master
+
+jobs:
+path-context:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
+      -
+        name: Checkout
         uses: actions/checkout@v2
-      - name: Push to Docker Hub
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+      -
+        name: Build and push
         uses: docker/build-push-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: paulomacedo/test
-          tag_with_ref: true
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64,linux/386
+          push: true
+          tags: paulomacedo/test:latest
